
	svyolr() didn't run for subsets of raked/calibrated designs (Antony Damico)

	add predict.svyolr (for Vincent Arel-Bundock)

	add anova.svycoxph (for Bryan Shepherd)

	add stringsToFactors=TRUE to svyby to ensure factors have same levels in domains
	(for various people including Stephanie Zimmer)

	more complicated svyby example in ?svycontrast

4.1-1	CRAN

4.1	svyquantile() has been COMPLETELY REWRITTEN. The old version is available
	as oldsvyquantile() (for David Eduardo Jorquera Petersen)

	svycontrast()'s improvements for statistics with replicates are now also there with
	svyby(), for domain comparisons (Robert Baskin)

	svyttest() now gives an error message if the binary group variable isn't binary
	(for StackOverflow 60930323)

	confint.svyglm Wald-type intervals now correctly label the columns (eg 2.5%, 97.5%)
	(for Molly Petersen)

	svyolr() using linearisation had the wrong standard errors for intercepts
	other than the first, if extracted using vcov (it was correct in summary() output)

	svyglm() gave deffs that were too large by a factor of nrow(design). (Adrianne Bradford)

	svycoxph() now warns if you try to use frailty or other penalised terms, because they
	just come from calling coxph and I have no reason to believe they work correctly
	in complex samples (for Claudia Rivera)

	coef.svyglm() now has a complete= argument to match coef.default(). (for Thomas Leeper)

	summary.svyglm() now gives NA p-values and a warning, rather than Inf standard errors,
	when the residual df are zero or negative (for Dan Simpson and Lauren Kennedy)

	In the multigroup case, svyranktest() now documents which elements of the 'htest'
	object have which parts of the result, because it's a bit weird (for Justin Allen)

	svycontrast() gets a new argument add=TRUE to keep the old coefficients as well

	twophase() can now take strata= arguments that are character, not just factor
	or numeric. (for Pam Shaw)
